--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- CODE EXPLAINED CHANNEL -->
-!<!doctype html>
+<!doctype html>
 <html lang="en">
     <head>
         <title>To Do List - Javascript</title>
