--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </div>
                 <div cllass="content"> 
                     <ul id="list">
+                        <!-- 
                         <li class = "item">
                             <i class="fa fa-circle-thin compelte"></i>
                             <p class="text"> Drink Coffee</p>
@@ -43,16 +44,15 @@
 
 
                         </li>
+                    -->
                     </ul>
-                    <div class="add-item">
+                    <div class="add-to-do">
                         <i class="fa fa-plus-circle"></i>
                         <input type="txt" id="input" placeholder="Add a to-do">
                     </div>
                 </div>
                 </div>
                 
-
-            <script src="js/app.js"></script>
         </main>
         <footer>
             <!-- place footer here -->
@@ -69,5 +69,7 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+
+        <script src="js/app.js"></script>
     </body>
 </html>
