fixed spelling errors and commented out code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <!--
                 <li class="item">
                    <i class="fa fa-circle-thin complete"></i>
-                  <p class="text">Drink Coffe</p>
+                  <p class="text">Drink Coffee</p>
                   <i class="fa fa-trash-o delete"></i> 
                 </li>
               --> 
